# syntalos

./: meson.build
.github/workflows/: build-packages.yml  build-test.yml
modules/: meson.build
modules/camera-v4l2/: meson.build  v4l2cameramodule.cpp  v4l2cameramodule.h  v4l2capture.cpp  v4l2capture.h  v4l2controlapplier.cpp  v4l2controlapplier.h  v4l2controlpolicy.cpp  v4l2controlpolicy.h  v4l2device.cpp  v4l2device.h  v4l2settingsdialog.cpp  v4l2settingsdialog.h
modules/videorecorder/: recordersettingsdialog.cpp  videowriter.cpp
src/: projectfile.cpp
src/fabric/: mlinkmodule.cpp  pyvenvmanager.cpp
src/mlink/: ipc-iox-private.cpp  ipc-types-private.h  syntaloslink.cpp
src/python/: pysy-mlink.cpp
src/roudi/: main.cpp
tests/scenarios/: ipc-test-complex.toml  ipc-test-pycpp-mods.toml
tests/scenarios/projects/: ipc-test-pycpp-mods.syct  openephys-acq-smoketest.syct
